--- a/scss/_author-posts-list.scss
+++ b/scss/_author-posts-list.scss
@@ -1,6 +1,7 @@
 .author-posts-list {
   border-top: 1px solid $lightGray;
   border-bottom: 1px solid $lightGray;
+  padding-top: $layoutUnit;
 
   h4 {
     margin-top: $layoutUnit;
@@ -9,9 +10,6 @@
   .summary {
     margin-top: $layoutUnit;
     margin-bottom: $layoutUnit;
-    // display: inline-block;
-    // width: 49%;
-    // vertical-align: top;
 
     header h3 {
       font-size: $baseFontSize;
