--- a/scss/_side-menu.scss
+++ b/scss/_side-menu.scss
@@ -12,6 +12,7 @@ $menu-left-padding: 20px;
   h3 {
     font-size: 16px;
     padding-left: $menu-left-padding;
+    margin-bottom: $layoutUnit;
   }
 
   ul {
