--- a/scss/_social.scss
+++ b/scss/_social.scss
@@ -16,6 +16,7 @@ $social-height:   16px;
       height: $social-height;
       line-height: $social-height;
       font-size: $smallFontSize;
+      color: $grey;
     }
 
     svg {
